--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,10 +20,11 @@
             border: none;
             border-radius: 0px;
             min-height: 75px;
+            margin-bottom: 0px;
         }
 
         .eventgo-navbar-container {
-            margin: 10px auto;
+            padding: 10px 0;
         }
 
         .navbar-header .navbar-brand {
@@ -36,9 +37,47 @@
             color: #f1f1f1;
         }
 
+        #eventgo-main {
+            height: 500px;
+            display: block;
+        }
+
+        #eventgo-main .eventFinderView {
+            height: 100%;
+            border-right: 2px solid #777;
+        }
+
+        .eventgo-container-fluid, .eventgo-container-fluid .row {
+            height: 100%;
+        }
+
+        footer {
+            min-height: 60px;
+            background-color: #333;
+        }
+
+        footer .eventgo-footer {
+            padding: 10px 0;
+        }
+
+        footer h4 {
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+            color: #f1f1f1;
+        }
+
+        #coffee-icon {
+            color: #B55A00;
+        }
+
+        #love-icon {
+            color: #ff0000;
+        }
+
     </style>
 </head>
-<body>
+<body ng-app>
     <header>
         <nav id="eventgo-navbar" class="navbar navbar-default">
             <div class="eventgo-navbar-container container">
@@ -55,9 +94,23 @@
         </nav>
     </header>
 
-    <div id="main">
-
+    <div id="eventgo-main">
+        <div class="eventgo-container-fluid">
+            <div class="row">
+                <div class="eventFinderView col-sm-4">
+                    This is where the list view goes
+                </div>
+                <div class="mapInterfaceView col-sm-8">
+                    This is where the map goes
+                </div>
+            </div>
+        </div>
     </div>
 
+    <footer>
+        <div class="eventgo-footer">
+            <h4>Made with coffee <i id="coffee-icon" class="fa fa-coffee" aria-hidden="true"></i> and love <i id="love-icon" class="fa fa-heart" aria-hidden="true"></i> at McHacks 2017</h4>
+        </div>
+    </footer>
 </body>
 </html>
