--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw0FytmYT_pRDVOFCyPk9GAJRzVXbew58&callback=initMap" async defer></script>
+    <script src="modules/mapInterface/map.js" /></script>
 
     <title>EventGo: Find what's happening around now!</title>
 
@@ -22,6 +24,11 @@
             min-height: 75px;
             margin-bottom: 0px;
         }
+
+		#map{
+			height: 100%;
+			width: 100%;
+		}
 
         .eventgo-navbar-container {
             padding: 10px 0;
@@ -101,7 +108,7 @@
                     This is where the list view goes
                 </div>
                 <div class="mapInterfaceView col-sm-8">
-                    This is where the map goes
+					<div id="map"></div>
                 </div>
             </div>
         </div>
