--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head ng-app="eventgoApp">
     <meta charset="UTF-8">
 
     <!-- Latest compiled and minified CSS -->
@@ -9,8 +9,12 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Angular stuff -->
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+
+    <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>-->
 
     <title>EventGo: Find what's happening around now!</title>
 
@@ -77,7 +81,7 @@
 
     </style>
 </head>
-<body ng-app>
+<body ng-controller="EventgoController as eventgoCtrl">
     <header>
         <nav id="eventgo-navbar" class="navbar navbar-default">
             <div class="eventgo-navbar-container container">
@@ -97,7 +101,8 @@
     <div id="eventgo-main">
         <div class="eventgo-container-fluid">
             <div class="row">
-                <div class="eventFinderView col-sm-4">
+                <div class="col-sm-4">
+                    <event-finder></event-finder>
                     This is where the list view goes
                 </div>
                 <div class="mapInterfaceView col-sm-8">
