--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw0FytmYT_pRDVOFCyPk9GAJRzVXbew58&callback=initMap" async defer></script>
-    <script src="modules/mapInterface/map.js" /></script>
+    <script src="/js/map.js" /></script>
 
     <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>-->
 
@@ -31,7 +31,7 @@
 
 		#map{
 			height: 100%;
-			width: 100%;
+			/*width: 100%;*/
 		}
 
         .eventgo-navbar-container {
@@ -112,8 +112,8 @@
                     <event-finder></event-finder>
                     This is where the list view goes
                 </div>
-                <div class="mapInterfaceView col-sm-8">
-					<div id="map"></div>
+                <div id="map" class="mapInterfaceView col-sm-8">
+					<!-- <div id="map"></div> -->
                 </div>
             </div>
         </div>
