added css to main page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,8 @@
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+    <!-- Our CSS -->
+    <link rel="stylesheet" href="/css/main.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw0FytmYT_pRDVOFCyPk9GAJRzVXbew58&callback=initMap" async defer></script>
     <script src="/js/map.js" /></script>
 
