--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw0FytmYT_pRDVOFCyPk9GAJRzVXbew58&callback=initMap" async defer></script>
-    <script src="/js/map.js" /></script>
+    <script src="/js/map.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-    <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>-->
 
     <title>EventGo: Find what's happening around now!</title>
 
@@ -53,13 +53,13 @@
             display: block;
         }
 
-        #eventgo-main .eventFinderView {
+        .eventgo-container-fluid {
             height: 100%;
-            border-right: 2px solid #777;
         }
 
-        .eventgo-container-fluid, .eventgo-container-fluid .row {
-            height: 100%;
+        .eventgo-container-fluid .row {
+            margin-right: 0;
+            margin-left: 0;
         }
 
         footer {
@@ -84,6 +84,11 @@
 
         #love-icon {
             color: #ff0000;
+        }
+
+        .col-sm-4, .col-sm-8 {
+            padding-left: 0;
+            padding-right: 0;
         }
 
     </style>
