--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,21 +9,24 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- Angular stuff -->
-    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <!-- Angular stuff-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
+
     <!-- Latest Font-awesome -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <!-- Our CSS -->
     <link rel="stylesheet" href="/css/main.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw0FytmYT_pRDVOFCyPk9GAJRzVXbew58&callback=initMap" async defer></script>
     <script src="/js/map.js"></script>
+    <script src = "/js/angular.min.js"></script>
+    <script src = "/js/angular-route.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
 
     <title>EventGo: Find what's happening around now!</title>
 </head>
 
-<body ng-controller="EventgoController as eventgoCtrl">
+<body ng-controller="">
     <header>
         <nav id="eventgo-navbar" class="navbar navbar-default">
             <div class="eventgo-navbar-container container">
@@ -40,15 +43,15 @@
         </nav>
     </header>
 
-    <div id="eventgo-main">
+    <div class="eventgo-main">
         <div class="eventgo-container-fluid">
             <div class="row">
                 <div class="col-sm-3">
                     <event-finder></event-finder>
                     This is where the list view goes
                 </div>
-                <div id="map" class="mapInterfaceView col-sm-9">
-					<!-- <div id="map"></div> -->
+                <div class="col-sm-9">
+					<div id="map"></div>
                 </div>
             </div>
         </div>
