--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
     myapp.controller('EventListController', ['$scope', '$http', function($scope, $http) {
         $scope.eventList = [];
         $http.get('/events/get/all').then(function(events) {
-           console.log(events);
+            console.log(events);
             $scope.eventList = events.data;
         }).catch(function(err) {
             console.log('err: ', err);
         });
     }]);
-
-
 
     /*myapp.controller('', ['$scope', '$http', function($scope){
         $scope.sortType     = 'name'; // set the default sort type
@@ -92,18 +90,20 @@
                         </div>
                         <div class="event-finder__body" >
                             <ul class="list-group">
-                                <li ng-repeat="evnt in eventList | filter:searchEvent" class="list-group-item">
+                                <li ng-repeat="evnt in eventList | orderBy:'-population' | filter:searchEvent" class="list-group-item">
                                     <div class="eventgo-list-container container">
                                         <div class="row">
                                             <div id="event-id" class="col-sm-1">
                                                 <p>{{evnt.id}}.</p>
                                             </div>
                                             <div id="event-info" class="col-sm-9">
-                                                <h3 id="event-name">{{evnt.name}}</h3>
-                                                <h4 id="event-location">{{evnt.location}}</h4>
+                                                <a id="event-name">{{evnt.name}}</a>
+                                                <!--<h4 id="event-location">{{evnt.location}}</h4>-->
                                             </div>
-                                            <div id="event-population" class="col-sm-2">
-                                                <p>{{evnt.population}}</p>
+                                            <div class="col-sm-2">
+                                                <div id="event-population">
+                                                    <h4>{{evnt.population}}</h4>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
