cookie popup made

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
 </script>
 
 <body ng-app="myapp" ng-controller="EventListController">
+    <div class="cookie-popup">
+        <div class="container">
+            <div class="row cookie-message">
+                <h4>This site uses cookies and your location to find out awesome events happening near you now.</h4>
+            </div>
+            <div class="row buttons">
+                <div class="col-sm-6">
+                    <div class="btn btn-default">
+                        I Accept Cookies
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="btn btn-default">
+                        I Refuse Cookies
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
     <header>
         <nav id="eventgo-navbar" class="navbar navbar-default">
             <div class="eventgo-navbar-container container">
