cookie popup in footer

--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
             console.log(events);
             $scope.eventList = events.data;
 			eventVar = events.data;
-            var ID = eventVar.length;
-            alert(ID);
 			loadPoints();
-            $scope.getID = function(id) {
-                return new Array(id);
-            }
         }).catch(function(err) {
             console.log('err: ', err);
         });
@@ -61,25 +56,6 @@
 </script>
 
 <body ng-app="myapp" ng-controller="EventListController">
-    <div class="cookie-popup">
-        <div class="container">
-            <div class="row cookie-message">
-                <h4>This site uses cookies and your location to find out awesome events happening near you now.</h4>
-            </div>
-            <div class="row buttons">
-                <div class="col-sm-6">
-                    <div class="btn btn-default">
-                        I Accept Cookies
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="btn btn-default">
-                        I Refuse Cookies
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
     <header>
         <nav id="eventgo-navbar" class="navbar navbar-default">
             <div class="eventgo-navbar-container container">
@@ -114,9 +90,9 @@
                                 <li ng-repeat="evnt in eventList | orderBy:'-population' | filter:searchEvent" class="list-group-item">
                                     <div class="eventgo-list-container container">
                                         <div class="row">
-                                            <div id="event-id" ng-repeat="i in evnt.id"class="col-sm-1">
-                                                <p>i.</p>
-                                            </div>
+                                            <!--<div id="event-id" class="col-sm-1">
+                                                <p>{{i}}.</p>
+                                            </div>-->
                                             <div id="event-info" class="col-sm-9">
                                                 <a id="event-name">{{evnt.name}}</a>
                                                 <!--<h4 id="event-location">{{evnt.location}}</h4>-->
@@ -142,7 +118,26 @@
 
     <footer>
         <div class="eventgo-footer">
-            <h4>Made with <span id="changing-text"></span> <i id="coffee-icon" class="fa fa-coffee" aria-hidden="true"></i> and love <i id="love-icon" class="fa fa-heart" aria-hidden="true"></i> at McHacks 2017</h4>
+            <h4>Made with <i id="coffee-icon" class="fa fa-coffee" aria-hidden="true"></i> and <i id="love-icon" class="fa fa-heart" aria-hidden="true"></i> at McHacks 2017</h4>
+        </div>
+        <div class="cookie-popup">
+            <div class="container">
+                <div class="row cookie-message">
+                    <h4>This site uses cookies and your location to find out awesome events happening near you now.</h4>
+                </div>
+                <div class="row buttons">
+                    <div class="col-sm-6">
+                        <div class="btn btn-default">
+                            I Accept Cookies
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="btn btn-default">
+                            I Refuse Cookies
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDYC6yCadsAocxpXUAa5f1LAbJfue062I&callback=loadMap" async defer></script>
