--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Angular stuff-->
     <script src="/js/angular.min.js"></script>
     <script src="/js/angular-route.min.js"></script>
-    
-    
+
+
 
     <!--<script src="app.js"></script>-->
     <script src="/js/map.js"></script>
@@ -94,12 +94,12 @@
                                                 <p>{{i}}.</p>
                                             </div>-->
                                             <div id="event-info" class="col-sm-9">
-                                                <a id="event-name">{{evnt.name}}</a>
+                                                <a id="event-name">{{ evnt.name }}</a>
                                                 <!--<h4 id="event-location">{{evnt.location}}</h4>-->
                                             </div>
                                             <div class="col-sm-2">
                                                 <div id="event-population">
-                                                    <h4>{{evnt.population}}</h4>
+                                                    <h4>{{ evnt.population }}</h4>
                                                 </div>
                                             </div>
                                         </div>
@@ -120,7 +120,7 @@
         <div class="eventgo-footer">
             <h4>Made with <i id="coffee-icon" class="fa fa-coffee" aria-hidden="true"></i> and <i id="love-icon" class="fa fa-heart" aria-hidden="true"></i> at McHacks 2017</h4>
         </div>
-        <div class="cookie-popup">
+        <!-- <div class="cookie-popup">
             <div class="container">
                 <div class="row cookie-message">
                     <h4>This site uses cookies and your location to find out awesome events happening near you now.</h4>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </footer>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDYC6yCadsAocxpXUAa5f1LAbJfue062I&callback=loadMap" async defer></script>
 </body>
