--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             console.log('err: ', err);
         })
     }]);
-
 </script>
 
 <body ng-app="myapp" ng-controller="EventListController">
@@ -65,7 +64,7 @@
                             </div>
                         </div>
                         <div class="event-finder__body" >
-                            <ul class="list-group">
+                            <ul class="nav list-group">
                                 <li ng-repeat="evnt in eventList | orderBy:'-population' | filter:searchEvent" class="list-group-item">
                                     <div class="eventgo-list-container container">
                                         <div class="row">
